{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 4,
  "lineage": "969390c3-0495-e571-f200-5387b83594fa",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269415248862:subnet/subnet-0b12d33e10affbbcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4074,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b12d33e10affbbcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "269415248862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f984eea39639a6e8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269415248862:vpc/vpc-0f984eea39639a6e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0933b2cb5b7ac9669",
            "default_route_table_id": "rtb-0bcaeed88e7bb5a4a",
            "default_security_group_id": "sg-092c5606e8612004b",
            "dhcp_options_id": "dopt-06ede172ade189353",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f984eea39639a6e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcaeed88e7bb5a4a",
            "owner_id": "269415248862",
            "tags": {
              "Name": "default-vpc"
            },
            "tags_all": {
              "Name": "default-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.richpong-cluster-eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269415248862:security-group/sg-013faf19b44cec628",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-013faf19b44cec628",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-00d962ecd4588e8a1"],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "richpong-cluster-cluster-20230614174321337400000005",
            "name_prefix": "richpong-cluster-cluster-",
            "owner_id": "269415248862",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "richpong-cluster-cluster"
            },
            "tags_all": {
              "Name": "richpong-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f984eea39639a6e8"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_default_vpc.default"],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.richpong-cluster-eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269415248862:security-group/sg-00d962ecd4588e8a1",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d962ecd4588e8a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-013faf19b44cec628"],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-013faf19b44cec628"],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-013faf19b44cec628"],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-013faf19b44cec628"],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-013faf19b44cec628"],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-013faf19b44cec628"],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "richpong-cluster-node-20230614174321337000000004",
            "name_prefix": "richpong-cluster-node-",
            "owner_id": "269415248862",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "richpong-cluster-node",
              "kubernetes.io/cluster/richpong-cluster": "owned"
            },
            "tags_all": {
              "Name": "richpong-cluster-node",
              "kubernetes.io/cluster/richpong-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f984eea39639a6e8"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_default_vpc.default"],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.richpong-cluster-eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2465708210",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013faf19b44cec628",
            "security_group_rule_id": "sgr-0fdd38d948da7d6a5",
            "self": false,
            "source_security_group_id": "sg-00d962ecd4588e8a1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.richpong-cluster-eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2528870813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-0805fbfd159ae14d5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2565162594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-0a8f13d69fa782cee",
            "self": false,
            "source_security_group_id": "sg-013faf19b44cec628",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-627920690",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-018b9a435fc864206",
            "self": false,
            "source_security_group_id": "sg-013faf19b44cec628",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3962513572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-093ff855902177676",
            "self": false,
            "source_security_group_id": "sg-013faf19b44cec628",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4285731973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-044455f0b0ab3d2ab",
            "self": false,
            "source_security_group_id": "sg-013faf19b44cec628",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2614241102",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-0c53807bea5d55d47",
            "self": false,
            "source_security_group_id": "sg-013faf19b44cec628",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1567408324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-09da279ce8b4b8f97",
            "self": false,
            "source_security_group_id": "sg-013faf19b44cec628",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4099898829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-01895ace32500d64e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3002758272",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-09b566c673f7f45ea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-379967343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00d962ecd4588e8a1",
            "security_group_rule_id": "sgr-009a9e6e7bafe63f2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.richpong-cluster-eks.aws_security_group.cluster",
            "module.richpong-cluster-eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}